--- a/Referrals-System/client/.gitignore
+++ b/Referrals-System/client/.gitignore
@@ -22,3 +22,11 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Local env files (do NOT commit secrets)
+.env
+src/.env
+
+# Logs
+npm-debug.log*
+pnpm-debug.log*
