--- a/Referrals-System/client/render.yaml
+++ b/Referrals-System/client/render.yaml
@@ -15,7 +15,6 @@ services:
         value: "https://refer-employee.onrender.com"
     # Route rewrite so SPA client-side routes return index.html (prevents 404 on reload)
     routes:
-      - type: redirect
+      - type: rewrite
         source: "/*"
         destination: "/index.html"
-        status: 200
